# vaja

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 47ce47e9f3a3_create_users_table.py  9be21264373d_create_tasks_table.py
api/: database.py  main.py
api/core/: config.py  database.py  models.py  router.py  schemas.py
api/models/: __init__.py  enums.py  task.py  user.py
api/modules/: __init__.py
api/modules/tasks/: __init__.py  enums.py  models.py  router.py  schemas.py
