[project]
name = "vaja"
version = "0.1.0"
description = "Voice AI Assistant — Telegram bot for task management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

# Shared dependencies used by both services
dependencies = []

[dependency-groups]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
]
bot = [
    "aiogram>=3.10",
    "aiohttp>=3.10",
]
ai = [
    "anthropic>=0.34",
    "groq>=0.11",
    "elevenlabs>=1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",       # async test client for FastAPI
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.ruff.format]
quote-style = "double"  # consistent with Black

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests", "bot/tests"]
